[package]
name = "twitter_bot01"
version = "0.1.0"
authors = ["pc <paraxite@naver.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
twitter_ready = []

[dependencies]
tokio = {version="0.1.22", default-features=false, features=["tokio-current-thread"]}
# egg-mode = {version="0.13.0", default-features=false, features=[ "hyper-rustls" ]}
egg-mode = {path="twitter-rs", default-features=false, features=[ "hyper-rustls" ]}
gif = "0.10.3"
rusttype = "0.8.1"
serde_json = "1.0.40"
rayon = "1.2.0"
rand = "0.7.2"
chrono = "0.4.9"

[build-dependencies]
serde_json = "1.0.40"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1