[package]
name = "twitter_bot01"
version = "0.1.0"
authors = ["pc <paraxite@naver.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
twitter_ready = []

[dependencies]
log = "0.4"
env_logger = "0.7"
tokio = "1.8"
reqwest = {version="0.9", default-features=false, features=["rustls-tls"]}
egg-mode = {git="https://github.com/QuietMisdreavus/twitter-rs", rev="027c9131b924b742edb1a5a2b0c99a2147c01dc3", default_features=false, features=["hyper-rustls"]}
gif = "0.10"
rusttype = "0.8"
serde_json = "1.0"
rayon = "1.2"
rand = "0.7"
chrono = "0.4"
unicode-normalization = "0.1"

[build-dependencies]
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1